--- a/cases.html
+++ b/cases.html
@@ -55,7 +55,7 @@
 
 
 
-    <div class="containerb">
+    <div class="container">
         <hr class="featurette-dividerA">
         <h5>List of COVID-19 CASES in CDO</h5>
         <p>as of June 6, 2020</p>
