--- a/cases.html
+++ b/cases.html
@@ -40,12 +40,9 @@
               <a class="nav-link" href="cases.html">Cases</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About us</a>
+              <a class="nav-link" href="aboutus.html">About us</a>
             </li>    
-            <form class="form-inline" action="/action_page.php">
-              <input class="form-control mr-sm-2" type="text" placeholder="Search">
-              <button class="btn btn-success" type="submit">Search</button>
-            </form>
+           
           </ul>
         </div>        
    </nav>
@@ -188,7 +185,7 @@
            <div class="sidebar-column col-md-4">
               <section id="text-1" class="widget widget_text">			
                 <div class="textwidget"><p><img class="logocdo" src="Images/footeriphonex.png" alt="" width="281" height="52"></p>
-                  <p>Cagayan de Oro is a 1st class highly urbanized city in Northern Mindanao, Philippines. It is the capital of the province of Misamis Oriental where it is geographically situated but governed administratively independent from it.</p>
+                  <p1>Cagayan de Oro is a 1st class highly urbanized city in Northern Mindanao, Philippines. It is the capital of the province of Misamis Oriental where it is geographically situated but governed administratively independent from it.</p1>
                   <p><span style="color: #bfbfbf;">@2020 @CDOinfonet. All rights reserved.</span></p>
                  </div>
               </section>				
@@ -196,9 +193,11 @@
           
         <div class="sidebar-column col-md-4">
            <section id="text-2" class="widget widget_text"><h3 class="widget-title">    Contact us</h3>			
-              <div class="textwidget"><p><span style="color: #bfbfbf;">Email:</span> jessonsacote.js@gmail.com</p>
-                 <p><span style="color: #bfbfbf;">Phone:</span> 09773973043</p>
-                 <p><span style="color: #bfbfbf;">Address:</span> Zone 5, Iponan, Cagayan de Oro City</p>
+              <div class="textwidget"><p1><span style="color: #bfbfbf;">Email:</span> jessonsacote.js@gmail.com</p1>
+                <br> 
+                 <p1><span style="color: #bfbfbf;">Phone:</span> 09773973043</p1>
+                 <br> 
+                 <p1><span style="color: #bfbfbf;">Address:</span> Zone 5, Iponan, Cagayan de Oro City</p1>
               </div>
            </section>				
          </div>
@@ -207,10 +206,9 @@
             <section id="nav_menu-1" class="widget widget_nav_menu"><h3 class="widget-title">Quick links</h3>
               <div class="menu-quick-links-container">
                 <ul id="menu-quick-links" class="menu">
-                  <li id="menu-item-173" ><a href="#">Home</a></li>
-                  <li id="meenu-item-173" ><a href="#">Contact</a></li>
-                  <li id="meeenu-item-173" ><a href="#">Report</a></li>
-                  <li id="meeeenu-item-173" ><a href="#">About us</a></li>
+                  <li id="menu-item-173" ><a href="index.html">Home</a></li>
+                  <li id="meenu-item-173" ><a href="cases.html">Cases</a></li>
+                  <li id="meeeenu-item-173" ><a href="aboutus.html">About us</a></li>
                 </ul>
                </div>
              </section>			
