--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                       <a class="nav-link" href="cases.html">Cases    </a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">About us</a>
+                      <a class="nav-link" href="aboutus.html">About us</a>
                     </li>    
                     <form class="form-inline" action="/action_page.php">
                       <input class="form-control mr-sm-2" type="text" placeholder="Search">
