--- a/index.html
+++ b/index.html
@@ -42,10 +42,7 @@
                     <li class="nav-item">
                       <a class="nav-link" href="aboutus.html">About us</a>
                     </li>    
-                    <form class="form-inline" action="/action_page.php">
-                      <input class="form-control mr-sm-2" type="text" placeholder="Search">
-                      <button class="btn btn-success" type="submit">Search</button>
-                    </form>
+                   
                   </ul>
                 </div>        
            </nav>
@@ -215,10 +212,9 @@
                             <section id="nav_menu-1" class="widget widget_nav_menu"><h3 class="widget-title">Quick links</h3>
                               <div class="menu-quick-links-container">
                                 <ul id="menu-quick-links" class="menu">
-                                  <li id="menu-item-173" ><a href="#">Home</a></li>
-                                  <li id="meenu-item-173" ><a href="#">Contact</a></li>
-                                  <li id="meeenu-item-173" ><a href="#">Report</a></li>
-                                  <li id="meeeenu-item-173" ><a href="#">About us</a></li>
+                                  <li id="menu-item-173" ><a href="index.html">Home</a></li>
+                                  <li id="meenu-item-173" ><a href="cases.html">Cases</a></li>
+                                  <li id="meeeenu-item-173" ><a href="aboutus.html">About us</a></li>
                                 </ul>
                                </div>
                              </section>			
